Add complete source code and render.yaml for Render deployment on gh-pages branch

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,8 @@
-# Replace this with your MongoDB Atlas connection string or local MongoDB URL
-# Example: mongodb+srv://username:password@cluster.mongodb.net/pawsocial
-# Or for local: mongodb://localhost:27017/pawsocial
-MONGO_URL=mongodb://localhost:27017/pawsocial
-JWT_SECRET=supersecretjwtkey
+# MongoDB connection string
+MONGO_URL=mongodb+srv://shw30_db_user:Goodday2025@pawpawsocial.cndiwia.mongodb.net/pawsocial
+
+# Server port
 PORT=4000
+
+# JWT Secret (generate a strong random string for production)
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
