--- a/render.yaml
+++ b/render.yaml
@@ -18,10 +18,8 @@ services:
     healthCheckPath: /health
 
   # Frontend Static Site
-  - type: web
+  - type: static
     name: pawsocial-client
-    runtime: static
-    plan: free
     buildCommand: cd client && npm install && npm run build
     staticPublishPath: ./client/build
     envVars:
